--- a/PatikaDev/src/main/java/com/patikaDev/View/EducatorGUI.form
+++ b/PatikaDev/src/main/java/com/patikaDev/View/EducatorGUI.form
@@ -173,7 +173,7 @@
                           </component>
                         </children>
                       </grid>
-                      <grid id="eb648" layout-manager="GridLayoutManager" row-count="10" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                      <grid id="eb648" layout-manager="GridLayoutManager" row-count="11" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                         <margin top="0" left="0" bottom="0" right="0"/>
                         <constraints>
                           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -181,7 +181,7 @@
                         <properties/>
                         <border type="none"/>
                         <children>
-                          <component id="5f17f" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+                          <component id="5f17f" class="javax.swing.JComboBox" binding="cmb_egitim_adi_2">
                             <constraints>
                               <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
@@ -189,7 +189,7 @@
                           </component>
                           <vspacer id="b2de0">
                             <constraints>
-                              <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                              <grid row="8" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                             </constraints>
                           </vspacer>
                           <component id="a1433" class="javax.swing.JLabel">
@@ -200,7 +200,7 @@
                               <text value="İçerik Başlığı"/>
                             </properties>
                           </component>
-                          <component id="8dda9" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+                          <component id="8dda9" class="javax.swing.JTextField" binding="txt_content_title">
                             <constraints>
                               <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                 <preferred-size width="150" height="-1"/>
@@ -216,7 +216,7 @@
                               <text value="İçerik Açıklaması"/>
                             </properties>
                           </component>
-                          <component id="8ed5d" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+                          <component id="8ed5d" class="javax.swing.JTextField" binding="txt_content_explanation">
                             <constraints>
                               <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                 <preferred-size width="150" height="-1"/>
@@ -232,9 +232,9 @@
                               <text value="İçerik Linki"/>
                             </properties>
                           </component>
-                          <component id="f2f6f" class="javax.swing.JButton" binding="içerikEkleButton" default-binding="true">
+                          <component id="f2f6f" class="javax.swing.JButton" binding="btn_contents_add">
                             <constraints>
-                              <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                              <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
                               <text value="İçerik Ekle"/>
@@ -242,7 +242,7 @@
                           </component>
                           <component id="24f87" class="javax.swing.JLabel">
                             <constraints>
-                              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
                               <text value="İçerik Id:"/>
@@ -250,7 +250,7 @@
                           </component>
                           <component id="c7ffd" class="javax.swing.JLabel" binding="lbl_content_id">
                             <constraints>
-                              <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                              <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
                               <text value=""/>
@@ -258,11 +258,19 @@
                           </component>
                           <component id="63058" class="javax.swing.JButton" binding="içerikSilButton" default-binding="true">
                             <constraints>
-                              <grid row="9" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                              <grid row="10" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
                               <text value="İçerik Sil"/>
                             </properties>
+                          </component>
+                          <component id="be160" class="javax.swing.JTextField" binding="txt_content_link">
+                            <constraints>
+                              <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                                <preferred-size width="150" height="-1"/>
+                              </grid>
+                            </constraints>
+                            <properties/>
                           </component>
                         </children>
                       </grid>
